--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -31,7 +31,7 @@ import MenuDropdown from './MenuDropdown.astro'
       </li>
       <li>
         <a href="/conocer-mas" class="relative font-bold transition-colors duration-300 hover:text-gray-600 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-gray-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
-          Conocer más
+          Podcast
         </a>
       </li>
     </ul>
