--- a/paga-web-astro/src/pages/publicaciones.astro
+++ b/paga-web-astro/src/pages/publicaciones.astro
@@ -25,7 +25,7 @@ const publicaciones = [
     <ul class="space-y-8">
       {publicaciones.map((pub) => (
         <li
-          tabIndex="0"
+          tabindex="0"
           class="flex items-start bg-white border-l-8 rounded-xl shadow-md p-6 hover:shadow-lg transition-all duration-300 border-verde relative outline-none focus:ring-4 focus:ring-verde/30 focus:border-verde focus:shadow-2xl active:bg-blue-50"
         >
           <span class="mr-4 mt-1 text-verde">
